Fix misplaced logo stretch css rule

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -2,8 +2,6 @@
 .container { width: 940px; } // Setting the width back to 940px
 }
 
-#logo img { width: 100%; }
-
 @media (max-width: 769px) {
     body {
         padding: 0;
@@ -305,4 +303,3 @@
         font-size: 16px;
     }
 }
-
